<resources>
    <string name="app_name">empsysfornec</string>
    <string name="name">員工姓名</string>
    <string name="exNumber">分機號碼</string>
    <string name="dept">點擊選擇部門名稱</string>
    <string name="jobTitle">點擊選擇職稱</string>
    <string name="cancel">取消</string>
    <string name="save">確認</string>
    <string name="errDataEmpty">資料不可為空</string>
    <string name="errDataError">分機號碼為四碼</string>
    <string name="txtDetail">姓名: %s; 分機: %s; 部門: %s; 職位: %s</string>

    <string-array name="txtDeptArray">
        <item>全部</item>
        <item>財務部</item>
        <item>技術部</item>
        <item>人力資源部</item>
    </string-array>

</resources>