<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".business.BuBusinessDataAddFragment">
    <data>
        <variable
            name="viewModel"
            type="com.example.empsysfornec.viewModel.DataAddViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.core.widget.NestedScrollView
            android:layout_width="413dp"
            android:layout_height="664dp"
            android:layout_marginTop="20dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilDataAddName"
                    style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="20dp"
                    android:paddingHorizontal="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietDataAddName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/name"
                        android:text="@={viewModel.emp.name}"
                        android:textColor="@color/black"
                        android:textColorHint="#000000" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilDataAddExNumber"
                    style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:paddingHorizontal="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tilDataAddName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietDataAddExNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/exNumber"
                        android:text="@={viewModel.emp.exNum}"
                        android:textColorHint="#00000000" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilDataAddDept"
                    style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:paddingHorizontal="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tilDataAddExNumber">

                    <TextView
                        android:id="@+id/tietDataAddDept"
                        android:layout_width="380dp"
                        android:layout_height="60dp"
                        android:background="@color/white"
                        android:gravity="center|left"
                        android:imeOptions="flagNoExtractUi"
                        android:paddingLeft="16dp"
                        android:textColorHint="@color/gray"
                        android:hint="@string/dept"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilDataAddJobTitle"
                    style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:paddingHorizontal="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tilDataAddDept">

                    <TextView
                        android:id="@+id/tietDataAddJobTitle"
                        android:layout_width="380dp"
                        android:layout_height="60dp"
                        android:background="@color/white"
                        android:gravity="center|left"
                        android:hint="@string/jobTitle"
                        android:imeOptions="flagNoExtractUi"
                        android:paddingLeft="16dp"
                        android:textColorHint="@color/gray"
                        android:textColor="@color/black"/>
                </com.google.android.material.textfield.TextInputLayout>



                <Button
                    android:id="@+id/btDataAddSave"
                    android:layout_width="155dp"
                    android:layout_height="84dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="36dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/save"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.75"
                    app:layout_constraintStart_toEndOf="@+id/btDataAddCancel"
                    app:layout_constraintTop_toBottomOf="@+id/tilDataAddJobTitle"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/btDataAddCancel"
                    android:layout_width="155dp"
                    android:layout_height="84dp"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/cancel"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilDataAddJobTitle"
                    app:layout_constraintVertical_bias="0.0" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>